get label by id
