# MyRecordsAPI/src/routes/label.route.ts
@@ -1,8 +1,8 @@
 import Router from 'express';
-import { getLabels } from '../controllers/label.controller';
+import { getLabels, getLabelById } from '../controllers/label.controller';
 
 const router = Router();
 
 router.get('/api/v1/labels', getLabels);
-
+router.get('/api/v1/labels/:id', getLabelById);
 export default router;
